Adjust background size to avoid image stretch

--- a/www/assets/css/partials/_typography.scss
+++ b/www/assets/css/partials/_typography.scss
@@ -3,7 +3,7 @@ body{
 		color: $backgroundColor;
 		position: center 50px;
 		repeat: no-repeat;
-		size: contain;
+		// size: contain;
 	}
 	font-size: 14px;
 	color: $fontColor;
